bug 247323: kbd stops working after visiting oddpost, anything with <iframe src=javascript:1>. r=dbaron, sr=bryner